[package]
name = "google-workspace-apis"
description = "A Rust library for interacting with Google Workspace APIs"
repository = "https://github.com/BitsAndDroids/google-workspace-apis"
keywords = ["google", "workspace", "apis", "tasks", "calendar"]
categories = ["web-programming", "api-bindings", "web-programming::http-client"]
version = "1.2.0"
edition = "2021"
license = "MIT"

[features]
calendar = []
tasks = []
gmail = []

[lib]
doctest = false

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "axum_calendar_example"
path = "examples/axum_calendar_example.rs"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.0", features = ["uuid1", "chrono04"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls", "charset", "http2", "system-proxy"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "alloc"] }

[dev-dependencies]
axum = { version = "0.8.4", features = ["json", "macros", "tokio"] }
tokio = { version = "1.44", features = ["rt-multi-thread"] }
mockito = "1.7.0"
